# music_recognition

./: .gitignore  CMakeLists.txt  README.md  build.sh  classifieur.py  eigen.cpp  extraction.cpp  main.cpp  predict.cpp
data/: bias.csv  coef.csv  features_cpp.csv
include/: au_reading.h  csvfile.h  global.h  signal.h
